# ai-context

./: .cursorrules  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: update-context.yml
ai_context/: __init__.py  cli.py
ai_context/analyzer/: __init__.py  ast_analyzer.py  deps.py  patterns.py  scanner.py
ai_context/cost/: __init__.py  estimator.py
ai_context/generator/: __init__.py  context.py
ai_context/generator/templates/: claude.md.j2  generic.j2
ai_context/utils/: git.py  ignore.py
contextly/: __init__.py  cli.py
contextly/analyzer/: ast_analyzer.py  patterns.py  scanner.py
contextly/generator/: context.py  token_counter.py
contextly/generator/templates/: copilot.j2  cursor.j2
examples/: sample_output.md
launch/: devto.md  hacker-news.md  reddit.md  twitter.md
tests/: test_ast_analyzer.py  test_cli.py  test_context_generator.py  test_scanner.py
