[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextly"
version = "0.1.0"
description = "Generate optimized AI context for your codebase. Save 60-80% on AI coding costs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "contextly contributors" }]
keywords = [
    "ai",
    "llm",
    "claude",
    "cursor",
    "copilot",
    "context",
    "token",
    "cost",
    "developer-tools",
    "code-generation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "rich>=13.0",
    "pathspec>=0.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
tiktoken = ["tiktoken>=0.7"]

[project.scripts]
contextly = "contextly.cli:main"

[project.urls]
Homepage = "https://github.com/sanyamk23/contextly"
Repository = "https://github.com/sanyamk23/contextly"
Issues = "https://github.com/sanyamk23/contextly/issues"

[tool.hatch.build.targets.wheel]
packages = ["contextly"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
